# devcontainer-templates

./: README.md
python/: pyproject.toml
python/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
python/test/: conftest.py
