[tool.poetry]
name = "python-example"
version = "0.0.1"
description = "Example project with Poetry inside a devcontainer"
authors = ["Konstantinos Samaras-Tsakiris <ksamtsak@gmail.com>"]
readme = "README.md"
licence = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
mypy = "^1.5"
pylint = "^2.17"
black = "^23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
